INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)

aux_source_directory(./apitbl BS_SRC)
aux_source_directory(./cmd_exp BS_SRC)
aux_source_directory(./exec BS_SRC)
aux_source_directory(./func_tbl BS_SRC)
aux_source_directory(./ic BS_SRC)
aux_source_directory(./loadbs BS_SRC)
aux_source_directory(./mem BS_SRC)
aux_source_directory(./rcu_engine BS_SRC)
aux_source_directory(./mtimer BS_SRC)
aux_source_directory(./plug_container BS_SRC)
aux_source_directory(./process_key BS_SRC)
aux_source_directory(./secInit BS_SRC)
aux_source_directory(./sockshow BS_SRC)
aux_source_directory(./splx BS_SRC)
aux_source_directory(./ssltcp BS_SRC)
aux_source_directory(./syscfg BS_SRC)
aux_source_directory(./sysinfo BS_SRC)
aux_source_directory(./sysrun BS_SRC)
aux_source_directory(./thread BS_SRC)
aux_source_directory(./timer BS_SRC)
aux_source_directory(./tm BS_SRC)
aux_source_directory(./vtimer BS_SRC)
aux_source_directory(./workdir BS_SRC)
aux_source_directory(./ws BS_SRC)
aux_source_directory(./poller BS_SRC)
aux_source_directory(./process_key BS_SRC)

add_library(bs SHARED ${BS_SRC} )
TARGET_LINK_LIBRARIES(bs util dgsutil unixlike_util comp-kfapp ncurses m pthread)
set_target_properties(bs PROPERTIES output_name "bs")

INSTALL(TARGETS bs DESTINATION /usr/local/lib)

