add_subdirectory(./acl)
#add_subdirectory(./arpcheat)
add_subdirectory(./hcall)
add_subdirectory(./ifnet)
add_subdirectory(./kfapp)
add_subdirectory(./localuser)
add_subdirectory(./nat)
add_subdirectory(./pcap)
add_subdirectory(./support)
add_subdirectory(./pwatcher)
add_subdirectory(./event_hub)
add_subdirectory(./precver)
add_subdirectory(./wan)
add_subdirectory(./webcenter)
add_subdirectory(./webproxy)
add_subdirectory(./ws)
add_subdirectory(./poller)
add_subdirectory(./telnet_server)
add_subdirectory(./pipecmds)
add_subdirectory(./sslvpn)
add_subdirectory(./vnic)
add_subdirectory(./log_agent)
add_subdirectory(./logcenter)
add_subdirectory(./logcenter_server)
add_subdirectory(./lua_mgr)
add_subdirectory(./iclog)
add_subdirectory(./backtrace)
add_subdirectory(./nqa)
add_subdirectory(./muc)
add_subdirectory(./ulc)
add_subdirectory(./cioctl)
add_subdirectory(./signal_slot)
add_subdirectory(./super)
add_subdirectory(./bpffunc)
add_subdirectory(./pcie_simu)

#add_subdirectory(./ldap)
#add_subdirectory(./bridge)

IF(USE_MYSQL)
add_subdirectory(./dc)
add_subdirectory(./vnet)
ENDIF()

IF(USE_IOT)
add_subdirectory(./iot)
ENDIF()

