
INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)

set(SRC "")

aux_source_directory(./ac SRC)
aux_source_directory(./acl SRC)
aux_source_directory(./action SRC)
aux_source_directory(./map SRC)
aux_source_directory(./arp SRC)
aux_source_directory(./arp_cheat SRC)
aux_source_directory(./array SRC)
aux_source_directory(./avl SRC)
aux_source_directory(./backtrace SRC)
aux_source_directory(./bitmap SRC)
aux_source_directory(./bitque SRC)
aux_source_directory(./buffer SRC)
aux_source_directory(./bridge SRC)
aux_source_directory(./caller SRC)
aux_source_directory(./cff SRC)
aux_source_directory(./cfgutl SRC)
aux_source_directory(./cfgAnalyse SRC)
aux_source_directory(./cjson SRC)
aux_source_directory(./conn SRC)
aux_source_directory(./connection_pool SRC)
aux_source_directory(./daemon SRC)
aux_source_directory(./data2hex SRC)
aux_source_directory(./db SRC)
aux_source_directory(./dbg SRC)
aux_source_directory(./dc SRC)
aux_source_directory(./dfa SRC)
aux_source_directory(./dhcp SRC)
aux_source_directory(./dll SRC)
aux_source_directory(./dns SRC)
aux_source_directory(./dns_service SRC)
aux_source_directory(./drp SRC)
aux_source_directory(./dstream SRC)
aux_source_directory(./err_info SRC)
aux_source_directory(./eth SRC)
aux_source_directory(./event SRC)
aux_source_directory(./exchar SRC)
aux_source_directory(./exturl SRC)
aux_source_directory(./fastcgi SRC)
aux_source_directory(./fib SRC)
aux_source_directory(./file SRC)
aux_source_directory(./fsm SRC)
aux_source_directory(./getopt SRC)
aux_source_directory(./cmd SRC)
aux_source_directory(./exec SRC)
aux_source_directory(./hash SRC)
aux_source_directory(./html SRC)
aux_source_directory(./httpAly SRC)
aux_source_directory(./http_get SRC)
aux_source_directory(./http_lib SRC)
aux_source_directory(./http_monitor SRC)
aux_source_directory(./icmp SRC)
aux_source_directory(./id_res SRC)
aux_source_directory(./id_key SRC)
aux_source_directory(./id_tbl SRC)
aux_source_directory(./id_mgr SRC)
aux_source_directory(./ifnet SRC)
aux_source_directory(./in_checksum SRC)
aux_source_directory(./ip SRC)
aux_source_directory(./ipfwd SRC)
aux_source_directory(./ipmac_tbl SRC)
aux_source_directory(./ippool SRC)
aux_source_directory(./itor SRC)
aux_source_directory(./json SRC)
aux_source_directory(./keepalive SRC)
aux_source_directory(./keyvalue SRC)
aux_source_directory(./kf SRC)
aux_source_directory(./largebitmap SRC)
aux_source_directory(./lasterror SRC)
aux_source_directory(./list_rule SRC)
aux_source_directory(./local_info SRC)
aux_source_directory(./log SRC)
aux_source_directory(./lstr SRC)
aux_source_directory(./mac_table SRC)
aux_source_directory(./mark_key_value SRC)
aux_source_directory(./mbuf SRC)
aux_source_directory(./mem SRC)
aux_source_directory(./mempool SRC)
aux_source_directory(./mime SRC)
aux_source_directory(./msgque SRC)
aux_source_directory(./msocket SRC)
aux_source_directory(./mutex SRC)
aux_source_directory(./myconf SRC)
aux_source_directory(./mypoll SRC)
aux_source_directory(./name_bit SRC)
aux_source_directory(./named_pipe SRC)
aux_source_directory(./nap SRC)
aux_source_directory(./nat SRC)
aux_source_directory(./netinfo SRC)
aux_source_directory(./num_list SRC)
aux_source_directory(./ob_chain SRC)
aux_source_directory(./object SRC)
aux_source_directory(./org_tree SRC)
aux_source_directory(./patchforwin SRC)
aux_source_directory(./pathtree SRC)
aux_source_directory(./pcap_agent SRC)
aux_source_directory(./phymng SRC)
aux_source_directory(./pki SRC)
aux_source_directory(./pkt_cap SRC)
aux_source_directory(./plug SRC)
aux_source_directory(./process SRC)
aux_source_directory(./queue SRC)
aux_source_directory(./rand SRC)
aux_source_directory(./rcu SRC)
aux_source_directory(./rpc SRC)
aux_source_directory(./rwlock SRC)
aux_source_directory(./sdc SRC)
aux_source_directory(./search SRC)
aux_source_directory(./sec/base64 SRC)
aux_source_directory(./sec/des SRC)
aux_source_directory(./sec/md5 SRC)
aux_source_directory(./sec/passwd SRC)
aux_source_directory(./sec/rsa SRC)
aux_source_directory(./sem SRC)
aux_source_directory(./ses SRC)
aux_source_directory(./sfsm SRC)
aux_source_directory(./signal SRC)
aux_source_directory(./signal_slot SRC)
aux_source_directory(./sock_fib SRC)
aux_source_directory(./sock_fwd SRC)
aux_source_directory(./sock_ses SRC)
aux_source_directory(./socket SRC)
aux_source_directory(./net SRC)
aux_source_directory(./spinlock SRC)
aux_source_directory(./sprintf SRC)
aux_source_directory(./ssl SRC)
aux_source_directory(./stack SRC)
aux_source_directory(./str_conversion SRC)
aux_source_directory(./str_list SRC)
aux_source_directory(./string SRC)
aux_source_directory(./sys SRC)
aux_source_directory(./table SRC)
aux_source_directory(./task_worker SRC)
aux_source_directory(./tcp SRC)
aux_source_directory(./time SRC)
aux_source_directory(./tp SRC)
aux_source_directory(./tree SRC)
aux_source_directory(./trie SRC)
aux_source_directory(./trusty_msg SRC)
aux_source_directory(./txt SRC)
aux_source_directory(./udp SRC)
aux_source_directory(./ulm SRC)
aux_source_directory(./uri_acl SRC)
aux_source_directory(./url SRC)
aux_source_directory(./url_match SRC)
aux_source_directory(./stub_bs SRC)
aux_source_directory(./user_tree SRC)
aux_source_directory(./buf SRC)
aux_source_directory(./vclock SRC)
aux_source_directory(./vdomain SRC)
aux_source_directory(./vf SRC)
aux_source_directory(./vldbmp SRC)
aux_source_directory(./vldcode SRC)
aux_source_directory(./vnic_agent SRC)
aux_source_directory(./vnic_lib SRC)
aux_source_directory(./web_proxy SRC)
aux_source_directory(./write_file_2_stream SRC)
aux_source_directory(./ws SRC)
aux_source_directory(./ws/plug_handler SRC)
aux_source_directory(./ws/plug_head_filter SRC)
aux_source_directory(./ws/plug_head_process SRC)
aux_source_directory(./xml SRC)
aux_source_directory(./Ring_Buf SRC)
aux_source_directory(./bloomfilter SRC)
aux_source_directory(./thread SRC)
aux_source_directory(./route SRC)
aux_source_directory(./heap SRC)
aux_source_directory(./license SRC)
aux_source_directory(./cpu SRC)
aux_source_directory(./harddisk SRC)
aux_source_directory(./tun SRC)
aux_source_directory(./ip_mask_tbl SRC)
aux_source_directory(./ipmask_bitmap SRC)
aux_source_directory(./pkt_policy SRC)
aux_source_directory(./vxlan SRC)
aux_source_directory(./free_list SRC)
aux_source_directory(./box SRC)
aux_source_directory(./ip_session SRC)
aux_source_directory(./pcap SRC)
aux_source_directory(./topn SRC)
aux_source_directory(./service_agent SRC)
aux_source_directory(./lua SRC)
aux_source_directory(./stream2ip SRC)
aux_source_directory(./ubpf SRC)
aux_source_directory(./sysrun SRC)
aux_source_directory(./syslog SRC)
aux_source_directory(./telnet SRC)
aux_source_directory(./leb SRC)
aux_source_directory(./wasm SRC)
aux_source_directory(./ring SRC)
aux_source_directory(./file_lock SRC)
aux_source_directory(./auto_port SRC)
aux_source_directory(./match SRC)

add_library(util ${SRC})
set_property(TARGET util PROPERTY POSITION_INDEPENDENT_CODE ON)

INSTALL(TARGETS util ARCHIVE DESTINATION /usr/local/lib/utl/)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/h DESTINATION /usr/local/include/utl)


