INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)
set(SRC "")
aux_source_directory(./ SRC)
aux_source_directory(./ip_group SRC)
aux_source_directory(./port_group SRC)
aux_source_directory(./init SRC)
aux_source_directory(./ip_acl SRC)
aux_source_directory(./uri_acl SRC)
aux_source_directory(./app SRC)
aux_source_directory(./muc SRC)
aux_source_directory(./dpi_acl SRC)
aux_source_directory(./domain_acl SRC)
aux_source_directory(./domain_group SRC)
set(NAME acl)
INCLUDE(../my_libapp.txt)
target_link_libraries(${LIB_NAME} dynamic-muc pcre)

