INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)
set(NAME ifnet)
set(SRC "")
aux_source_directory(./ SRC)
aux_source_directory(./main SRC)
aux_source_directory(./impl SRC)
aux_source_directory(./impl/pcap SRC)
aux_source_directory(./impl/vni SRC)
aux_source_directory(./impl/tun SRC)
aux_source_directory(./impl/tap SRC)
INCLUDE(../my_libapp.txt)
target_link_libraries(${LIB_NAME} dynamic-kfapp dynamic-mypcap dynamic-poller)
