INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)
set(NAME sslvpn)
set(SRC "")
aux_source_directory(./ SRC)
aux_source_directory(./acl SRC)
aux_source_directory(./cfglock SRC)
aux_source_directory(./context SRC)
aux_source_directory(./ctxdata SRC)
aux_source_directory(./dbg SRC)
aux_source_directory(./deliver SRC)
aux_source_directory(./dweb SRC)
aux_source_directory(./init SRC)
aux_source_directory(./inner_dns SRC)
aux_source_directory(./iptunnel SRC)
aux_source_directory(./local_user SRC)
aux_source_directory(./mf SRC)
aux_source_directory(./res SRC)
aux_source_directory(./role SRC)
aux_source_directory(./tcprelay SRC)
aux_source_directory(./trans SRC)
aux_source_directory(./ulm SRC)
aux_source_directory(./web_proxy SRC)
INCLUDE(../my_libapp.txt)
target_link_libraries(${LIB_NAME} dynamic-ws dynamic-ifnet dynamic-wan pcre)

