INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)
set(SRC "")
aux_source_directory(./ SRC)
aux_source_directory(./address SRC)
aux_source_directory(./arp SRC)
aux_source_directory(./cmd SRC)
aux_source_directory(./common SRC)
aux_source_directory(./comp SRC)
aux_source_directory(./deliverup SRC)
aux_source_directory(./dhcp SRC)
aux_source_directory(./fwd SRC)
aux_source_directory(./icmp SRC)
aux_source_directory(./ifnet SRC)
aux_source_directory(./init SRC)
aux_source_directory(./inloop SRC)
aux_source_directory(./kf SRC)
aux_source_directory(./link SRC)
aux_source_directory(./nat SRC)
aux_source_directory(./service SRC)
aux_source_directory(./vrf SRC)
set(NAME wan)
INCLUDE(../my_libapp.txt)

target_link_libraries(${LIB_NAME} comp-acl comp-if comp-pcap comp-support)
