INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)
set(SRC "")
aux_source_directory(./../vnet/link SRC)
aux_source_directory(./ SRC)
aux_source_directory(./cmd SRC)
aux_source_directory(./addrmonitor SRC)
aux_source_directory(./c2c SRC)
aux_source_directory(./context SRC)
aux_source_directory(./fsm SRC)
aux_source_directory(./functbl SRC)
aux_source_directory(./kf SRC)
aux_source_directory(./macfw SRC)
aux_source_directory(./mng SRC)
aux_source_directory(./phy/udp SRC)
aux_source_directory(./node SRC)
aux_source_directory(./protocol SRC)
aux_source_directory(./ses SRC)
aux_source_directory(./status SRC)
aux_source_directory(./task SRC)
aux_source_directory(./tp SRC)
aux_source_directory(./vnic SRC)
set(NAME vnetc)
INCLUDE(../../my_libapp.txt)

target_link_libraries(${LIB_NAME} )
