INCLUDE(${CMAKE_SOURCE_DIR}/my_cmake_def.txt)
set(SRC "")
aux_source_directory(./../vnet/link SRC)
aux_source_directory(./ SRC)
aux_source_directory(./acl SRC)
aux_source_directory(./cmd SRC)
aux_source_directory(./conf SRC)
aux_source_directory(./context SRC)
aux_source_directory(./db SRC)
aux_source_directory(./dc SRC)
aux_source_directory(./domain SRC)
aux_source_directory(./functbl SRC)
aux_source_directory(./macfw SRC)
aux_source_directory(./mng SRC)
aux_source_directory(./node SRC)
aux_source_directory(./phy/udp SRC)
aux_source_directory(./plugs SRC)
aux_source_directory(./protocol SRC)
aux_source_directory(./rcu SRC)
aux_source_directory(./rmt SRC)
aux_source_directory(./ses SRC)
aux_source_directory(./task SRC)
aux_source_directory(./tp SRC)
aux_source_directory(./user SRC)
aux_source_directory(./web SRC)
set(NAME vnets)
INCLUDE(../../my_libapp.txt)

target_link_libraries(${LIB_NAME} dynamic-dc dynamic-ws dynamic-ifnet dynamic-wan mysqlclient)
